# mail_slot

./: Cargo.toml  README.md
examples/: count_async.rs  count_to_ten.rs  just_listen.rs
src/: client.rs  error.rs  lib.rs  server.rs
src/mac/: client.rs  mod.rs  server.rs
src/windows/: client.rs  mod.rs  server.rs
