[package]
name = "mail_slot"
version = "0.1.3"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
edition = "2018"
description = "A Rust implementation of the Windows Mailslot API"
license = "MIT"
repository = "https://github.com/FreeMasen/mail_slot"
keywords = ["ipc", "windows", "mailslot"]
categories = ["os::windows-apis"]

[target.'cfg(target_os = "macos")'.dependencies.mach]
version = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["handleapi", "winbase", "winnt"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
